--- a/TKV2024.htm
+++ b/TKV2024.htm
@@ -49,18 +49,18 @@ xmlns="http://www.w3.org/TR/REC-html40">
  var c_lTabs=29;
 
  var c_rgszSh=new Array(c_lTabs);
- c_rgszSh[0] = "PO&#344;ADÍ";
- c_rgszSh[1] = "PO&#344;ADÍ-HS";
- c_rgszSh[2] = "PO&#344;ADÍ-DO";
- c_rgszSh[3] = "VÍT&#282;ZOVÉ";
- c_rgszSh[4] = "VÍT&#282;ZOVÉ-DO";
- c_rgszSh[5] = "VÍT&#282;ZOVÉ-HS";
+ c_rgszSh[0] = "POŘADÍ";
+ c_rgszSh[1] = "POŘADÍ-HS";
+ c_rgszSh[2] = "POŘADÍ-DO";
+ c_rgszSh[3] = "VÍTĚZOVÉ";
+ c_rgszSh[4] = "VÍTĚZOVÉ-DO";
+ c_rgszSh[5] = "VÍTĚZOVÉ-HS";
  c_rgszSh[6] = "DEMLOVKA";
  c_rgszSh[7] = "DEMLOVKA-HS";
  c_rgszSh[8] = "DEMLOVKA-DO";
- c_rgszSh[9] = "P&#344;IBYSLAV";
- c_rgszSh[10] = "P&#344;IBYSLAV-HS";
- c_rgszSh[11] = "P&#344;IBYSLAV-DO";
+ c_rgszSh[9] = "PŘIBYSLAV";
+ c_rgszSh[10] = "PŘIBYSLAV-HS";
+ c_rgszSh[11] = "PŘIBYSLAV-DO";
  c_rgszSh[12] = "U DEJVA";
  c_rgszSh[13] = "U DEJVA-HS";
  c_rgszSh[14] = "U DEJVA-DO";
@@ -70,9 +70,9 @@ xmlns="http://www.w3.org/TR/REC-html40">
  c_rgszSh[18] = "TAJFUN";
  c_rgszSh[19] = "TAJFUN-HS";
  c_rgszSh[20] = "TAJFUN-DO";
- c_rgszSh[21] = "ZAPOMN&#282;NÍ";
- c_rgszSh[22] = "ZAPOMN&#282;NÍ-HS";
- c_rgszSh[23] = "ZAPOMN&#282;NÍ-DO";
+ c_rgszSh[21] = "ZAPOMNĚNÍ";
+ c_rgszSh[22] = "ZAPOMNĚNÍ-HS";
+ c_rgszSh[23] = "ZAPOMNĚNÍ-DO";
  c_rgszSh[24] = "MADEIRA";
  c_rgszSh[25] = "MADEIRA-HS";
  c_rgszSh[26] = "MADEIRA-DO";
@@ -355,27 +355,27 @@ function fnSetActiveSheet(iSh)
  <x:ExcelWorkbook>
   <x:ExcelWorksheets>
    <x:ExcelWorksheet>
-    <x:Name>PO&#344;ADÍ</x:Name>
+    <x:Name>POŘADÍ</x:Name>
     <x:WorksheetSource HRef="TKV2024_files/sheet001.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>PO&#344;ADÍ-HS</x:Name>
+    <x:Name>POŘADÍ-HS</x:Name>
     <x:WorksheetSource HRef="TKV2024_files/sheet002.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>PO&#344;ADÍ-DO</x:Name>
+    <x:Name>POŘADÍ-DO</x:Name>
     <x:WorksheetSource HRef="TKV2024_files/sheet003.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>VÍT&#282;ZOVÉ</x:Name>
+    <x:Name>VÍTĚZOVÉ</x:Name>
     <x:WorksheetSource HRef="TKV2024_files/sheet004.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>VÍT&#282;ZOVÉ-DO</x:Name>
+    <x:Name>VÍTĚZOVÉ-DO</x:Name>
     <x:WorksheetSource HRef="TKV2024_files/sheet005.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>VÍT&#282;ZOVÉ-HS</x:Name>
+    <x:Name>VÍTĚZOVÉ-HS</x:Name>
     <x:WorksheetSource HRef="TKV2024_files/sheet006.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
@@ -391,15 +391,15 @@ function fnSetActiveSheet(iSh)
     <x:WorksheetSource HRef="TKV2024_files/sheet009.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>P&#344;IBYSLAV</x:Name>
+    <x:Name>PŘIBYSLAV</x:Name>
     <x:WorksheetSource HRef="TKV2024_files/sheet010.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>P&#344;IBYSLAV-HS</x:Name>
+    <x:Name>PŘIBYSLAV-HS</x:Name>
     <x:WorksheetSource HRef="TKV2024_files/sheet011.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>P&#344;IBYSLAV-DO</x:Name>
+    <x:Name>PŘIBYSLAV-DO</x:Name>
     <x:WorksheetSource HRef="TKV2024_files/sheet012.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
@@ -439,15 +439,15 @@ function fnSetActiveSheet(iSh)
     <x:WorksheetSource HRef="TKV2024_files/sheet021.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>ZAPOMN&#282;NÍ</x:Name>
+    <x:Name>ZAPOMNĚNÍ</x:Name>
     <x:WorksheetSource HRef="TKV2024_files/sheet022.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>ZAPOMN&#282;NÍ-HS</x:Name>
+    <x:Name>ZAPOMNĚNÍ-HS</x:Name>
     <x:WorksheetSource HRef="TKV2024_files/sheet023.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>ZAPOMN&#282;NÍ-DO</x:Name>
+    <x:Name>ZAPOMNĚNÍ-DO</x:Name>
     <x:WorksheetSource HRef="TKV2024_files/sheet024.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
