--- a/TKV2024_files/sheet028.htm
+++ b/TKV2024_files/sheet028.htm
@@ -4,7 +4,7 @@ xmlns:x="urn:schemas-microsoft-com:office:excel"
 xmlns="http://www.w3.org/TR/REC-html40">
 
 <head>
-<meta http-equiv=Content-Type content="text/html; charset=windows-1252">
+<meta http-equiv=Content-Type content="text/html; charset=utf-8">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
 <link id=Main-File rel=Main-File href="../TKV2024.htm">
@@ -79,9 +79,9 @@ else
   <td class=xl70 width=50 style='width:38pt'></td>
  </tr>
  <tr height=58 style='height:43.5pt'>
-  <td colspan=15 height=58 class=xl174 style='border-right:.5pt solid black;
-  height:43.5pt'><span style='mso-spacerun:yes'> </span>TOUR KRAJE
-  VYSO&#268;INA 2024 - ÚVODNÍ TURNAJ V DOUBLE OUT</td>
+  <td colspan=15 height=58 class=xl182 style='border-right:.5pt solid black;
+  height:43.5pt'><span style='mso-spacerun:yes'>Â </span>TOUR KRAJE VYSOÄŒINA
+  2024 - ÃšVODNÃ TURNAJ V DOUBLE OUT</td>
  </tr>
  <tr height=0 style='display:none'>
   <td class=xl70></td>
@@ -105,9 +105,9 @@ else
   <td class=xl70 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border-top:none;
-  border-right:.5pt solid windowtext;border-bottom:none;border-left:.5pt solid windowtext'>Hrací
-  místo</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>ÚVODNÍ</td>
+  border-right:.5pt solid windowtext;border-bottom:none;border-left:.5pt solid windowtext'>HracÃ­
+  mÃ­sto</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>ÃšVODNÃ</td>
   <td class=xl107></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -143,8 +143,8 @@ else
   <td class=xl70 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border-top:none;
-  border-right:.5pt solid windowtext;border-bottom:none;border-left:.5pt solid windowtext'>Muž
-  (m) / žena (ž)</td>
+  border-right:.5pt solid windowtext;border-bottom:none;border-left:.5pt solid windowtext'>MuÅ¾
+  (m) / Å¾ena (Å¾)</td>
   <td class=xl70 style='border:.5pt solid windowtext'>(All)</td>
   <td class=xl107></td>
   <td class=xl70></td>
@@ -177,26 +177,26 @@ else
   <td class=xl70></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl112 style='height:15.0pt'>Po&#345;adí</td>
+  <td height=20 class=xl112 style='height:15.0pt'>PoÅ™adÃ­</td>
   <td class=xl70 style='font-size:11.0pt;color:white;font-weight:700;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext;
-  background:#4F81BD;mso-pattern:black none'>Jméno</td>
+  background:#4F81BD;mso-pattern:black none'>JmÃ©no</td>
   <td class=xl70 style='font-size:11.0pt;color:white;font-weight:700;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext;
   background:#4F81BD;mso-pattern:black none'>Body<span
-  style='mso-spacerun:yes'> </span></td>
+  style='mso-spacerun:yes'>Â </span></td>
   <td class=xl109 style='font-size:11.0pt;color:white;font-weight:700;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext;
   background:#4F81BD;mso-pattern:black none'><span
-  style='mso-spacerun:yes'> </span>Zaplaceno<span
-  style='mso-spacerun:yes'> </span></td>
+  style='mso-spacerun:yes'>Â </span>Zaplaceno<span
+  style='mso-spacerun:yes'>Â </span></td>
   <td class=xl70></td>
-  <td class=xl71>Vybráno</td>
-  <td class=xl110 style='border-left:none'><span style='mso-spacerun:yes'>  
-  </span>1 330 K&#269; </td>
+  <td class=xl71>VybrÃ¡no</td>
+  <td class=xl110 style='border-left:none'><span style='mso-spacerun:yes'>Â Â 
+  </span>1 330 KÄ </td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -213,13 +213,13 @@ else
   238;border:.5pt solid windowtext'>1</td>
   <td class=xl70 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>Strašil
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>StraÅ¡il
   Pavel [CZE015487]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>1050</td>
   <td class=xl109 style='border:.5pt solid windowtext'><span
-  style='mso-spacerun:yes'>             </span>70 K&#269; </td>
+  style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â Â Â  </span>70 KÄ </td>
   <td class=xl70></td>
-  <td class=xl71 style='border-top:none'>P&#345;išlo</td>
+  <td class=xl71 style='border-top:none'>PÅ™iÅ¡lo</td>
   <td class=xl75 style='border-top:none;border-left:none'>19</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -236,11 +236,11 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
   <td class=xl70 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>Bílek
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>BÃ­lek
   Radek [CZE056362]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>950</td>
   <td class=xl109 style='border:.5pt solid windowtext'><span
-  style='mso-spacerun:yes'>             </span>70 K&#269; </td>
+  style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â Â Â  </span>70 KÄ </td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -263,11 +263,11 @@ else
   Martin [CZE045588]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>850</td>
   <td class=xl109 style='border:.5pt solid windowtext'><span
-  style='mso-spacerun:yes'>             </span>70 K&#269; </td>
+  style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â Â Â  </span>70 KÄ </td>
   <td class=xl70></td>
-  <td class=xl71>Zaplaceno muži</td>
-  <td class=xl110 style='border-left:none'><span style='mso-spacerun:yes'>     
-  </span>910 K&#269; </td>
+  <td class=xl71>Zaplaceno muÅ¾i</td>
+  <td class=xl110 style='border-left:none'><span style='mso-spacerun:yes'>Â Â Â Â Â 
+  </span>910 KÄ </td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -283,15 +283,15 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
   <td class=xl70 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>Jenšík
-  Ond&#345;ej [CZE057906]</td>
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>JenÅ¡Ã­k
+  OndÅ™ej [CZE057906]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>750</td>
   <td class=xl109 style='border:.5pt solid windowtext'><span
-  style='mso-spacerun:yes'>             </span>70 K&#269; </td>
+  style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â Â Â  </span>70 KÄ </td>
   <td class=xl70></td>
-  <td class=xl71 style='border-top:none'>Zaplaceno ženy</td>
+  <td class=xl71 style='border-top:none'>Zaplaceno Å¾eny</td>
   <td class=xl110 style='border-top:none;border-left:none'><span
-  style='mso-spacerun:yes'>      </span>420 K&#269; </td>
+  style='mso-spacerun:yes'>Â Â Â Â Â  </span>420 KÄ </td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -308,10 +308,10 @@ else
   <td class=xl70 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>Meister
-  Lukáš [CZE074613]</td>
+  LukÃ¡Å¡ [CZE074613]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>650</td>
   <td class=xl109 style='border:.5pt solid windowtext'><span
-  style='mso-spacerun:yes'>             </span>70 K&#269; </td>
+  style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â Â Â  </span>70 KÄ </td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -330,11 +330,11 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>6</td>
   <td class=xl70 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>Vrzá&#269;ková
-  Alžb&#283;ta [CZE071138]</td>
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>VrzÃ¡ÄkovÃ¡
+  AlÅ¾bÄ›ta [CZE071138]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>650</td>
   <td class=xl109 style='border:.5pt solid windowtext'><span
-  style='mso-spacerun:yes'>             </span>70 K&#269; </td>
+  style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â Â Â  </span>70 KÄ </td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -353,11 +353,11 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>7</td>
   <td class=xl70 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>Novák
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>NovÃ¡k
   Radek [CZE049908]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>550</td>
   <td class=xl109 style='border:.5pt solid windowtext'><span
-  style='mso-spacerun:yes'>             </span>70 K&#269; </td>
+  style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â Â Â  </span>70 KÄ </td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -376,11 +376,11 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>8</td>
   <td class=xl70 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>Kameník
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>KamenÃ­k
   Roman [CZE059800]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>550</td>
   <td class=xl109 style='border:.5pt solid windowtext'><span
-  style='mso-spacerun:yes'>             </span>70 K&#269; </td>
+  style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â Â Â  </span>70 KÄ </td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -399,11 +399,11 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>9</td>
   <td class=xl70 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>&#268;echová
-  Kate&#345;ina [CZE064386]</td>
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>ÄŒechovÃ¡
+  KateÅ™ina [CZE064386]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>450</td>
   <td class=xl109 style='border:.5pt solid windowtext'><span
-  style='mso-spacerun:yes'>             </span>70 K&#269; </td>
+  style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â Â Â  </span>70 KÄ </td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -422,11 +422,11 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>10</td>
   <td class=xl70 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>Van&#283;&#269;ek
-  Ond&#345;ej [CZE049163]</td>
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>VanÄ›Äek
+  OndÅ™ej [CZE049163]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>450</td>
   <td class=xl109 style='border:.5pt solid windowtext'><span
-  style='mso-spacerun:yes'>             </span>70 K&#269; </td>
+  style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â Â Â  </span>70 KÄ </td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -445,11 +445,11 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>11</td>
   <td class=xl70 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>Vrzá&#269;ek
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>VrzÃ¡Äek
   Josef [CZE070728]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>450</td>
   <td class=xl109 style='border:.5pt solid windowtext'><span
-  style='mso-spacerun:yes'>             </span>70 K&#269; </td>
+  style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â Â Â  </span>70 KÄ </td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -468,11 +468,11 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>12</td>
   <td class=xl70 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>Medová
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>MedovÃ¡
   Marcela [CZE039792]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>450</td>
   <td class=xl109 style='border:.5pt solid windowtext'><span
-  style='mso-spacerun:yes'>             </span>70 K&#269; </td>
+  style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â Â Â  </span>70 KÄ </td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -491,11 +491,11 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>13</td>
   <td class=xl70 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>Fílová
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>FÃ­lovÃ¡
   Barbora [CZE049497]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>350</td>
   <td class=xl109 style='border:.5pt solid windowtext'><span
-  style='mso-spacerun:yes'>             </span>70 K&#269; </td>
+  style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â Â Â  </span>70 KÄ </td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -514,11 +514,11 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>14</td>
   <td class=xl70 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>Schabský
-  Luboš [CZE078137]</td>
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>SchabskÃ½
+  LuboÅ¡ [CZE078137]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>350</td>
   <td class=xl109 style='border:.5pt solid windowtext'><span
-  style='mso-spacerun:yes'>             </span>70 K&#269; </td>
+  style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â Â Â  </span>70 KÄ </td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -537,11 +537,11 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>15</td>
   <td class=xl70 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>Tu&#269;ek
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>TuÄek
   Roman [CZE051451]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>350</td>
   <td class=xl109 style='border:.5pt solid windowtext'><span
-  style='mso-spacerun:yes'>             </span>70 K&#269; </td>
+  style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â Â Â  </span>70 KÄ </td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -560,11 +560,11 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>16</td>
   <td class=xl70 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>Kope&#269;ek
-  Ond&#345;ej [CZE059905]</td>
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>KopeÄek
+  OndÅ™ej [CZE059905]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>350</td>
   <td class=xl109 style='border:.5pt solid windowtext'><span
-  style='mso-spacerun:yes'>             </span>70 K&#269; </td>
+  style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â Â Â  </span>70 KÄ </td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -583,11 +583,11 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>17</td>
   <td class=xl70 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>Tu&#269;ková
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>TuÄkovÃ¡
   Dana [CZE051452]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>250</td>
   <td class=xl109 style='border:.5pt solid windowtext'><span
-  style='mso-spacerun:yes'>             </span>70 K&#269; </td>
+  style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â Â Â  </span>70 KÄ </td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -607,10 +607,10 @@ else
   <td class=xl70 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>Smejkal
-  František [CZE071305]</td>
+  FrantiÅ¡ek [CZE071305]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>250</td>
   <td class=xl109 style='border:.5pt solid windowtext'><span
-  style='mso-spacerun:yes'>             </span>70 K&#269; </td>
+  style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â Â Â  </span>70 KÄ </td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -629,11 +629,11 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>19</td>
   <td class=xl70 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>Veleková
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>VelekovÃ¡
   Dagmar [CZE045129]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>250</td>
   <td class=xl109 style='border:.5pt solid windowtext'><span
-  style='mso-spacerun:yes'>             </span>70 K&#269; </td>
+  style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â Â Â  </span>70 KÄ </td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
