--- a/TKV2024_files/sheet029.htm
+++ b/TKV2024_files/sheet029.htm
@@ -4,7 +4,7 @@ xmlns:x="urn:schemas-microsoft-com:office:excel"
 xmlns="http://www.w3.org/TR/REC-html40">
 
 <head>
-<meta http-equiv=Content-Type content="text/html; charset=windows-1252">
+<meta http-equiv=Content-Type content="text/html; charset=utf-8">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
 <link id=Main-File rel=Main-File href="../TKV2024.htm">
@@ -73,9 +73,9 @@ else
   <td class=xl70 width=50 style='width:38pt'></td>
  </tr>
  <tr height=58 style='height:43.5pt'>
-  <td colspan=15 height=58 class=xl179 style='height:43.5pt'><span
-  style='mso-spacerun:yes'> </span>TOUR KRAJE VYSO&#268;INA 2024 - ÚVODNÍ
-  TURNAJ V HIGH SCORE</td>
+  <td colspan=15 height=58 class=xl187 style='height:43.5pt'><span
+  style='mso-spacerun:yes'>Â </span>TOUR KRAJE VYSOÄŒINA 2024 - ÃšVODNÃ TURNAJ V
+  HIGH SCORE</td>
  </tr>
  <tr height=0 style='display:none'>
   <td class=xl70></td>
@@ -99,9 +99,9 @@ else
   <td class=xl70 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border-top:none;
-  border-right:.5pt solid windowtext;border-bottom:none;border-left:.5pt solid windowtext'>Hrací
-  místo</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>ÚVODNÍ</td>
+  border-right:.5pt solid windowtext;border-bottom:none;border-left:.5pt solid windowtext'>HracÃ­
+  mÃ­sto</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>ÃšVODNÃ</td>
   <td class=xl107></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -137,8 +137,8 @@ else
   <td class=xl70 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border-top:none;
-  border-right:.5pt solid windowtext;border-bottom:none;border-left:.5pt solid windowtext'>Muž
-  (m) / žena (ž)</td>
+  border-right:.5pt solid windowtext;border-bottom:none;border-left:.5pt solid windowtext'>MuÅ¾
+  (m) / Å¾ena (Å¾)</td>
   <td class=xl70 style='border:.5pt solid windowtext'>(All)</td>
   <td class=xl107></td>
   <td class=xl70></td>
@@ -171,16 +171,16 @@ else
   <td class=xl70></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl112 style='height:15.0pt'>Po&#345;adí</td>
+  <td height=20 class=xl112 style='height:15.0pt'>PoÅ™adÃ­</td>
   <td class=xl70 style='font-size:11.0pt;color:white;font-weight:700;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext;
-  background:#4F81BD;mso-pattern:black none'>Jméno</td>
+  background:#4F81BD;mso-pattern:black none'>JmÃ©no</td>
   <td class=xl68 style='font-size:11.0pt;color:white;font-weight:700;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext;
   background:#4F81BD;mso-pattern:black none'>Body<span
-  style='mso-spacerun:yes'> </span></td>
+  style='mso-spacerun:yes'>Â </span></td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -201,7 +201,7 @@ else
   238;border:.5pt solid windowtext'>1</td>
   <td class=xl70 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>Strašil
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>StraÅ¡il
   Pavel [CZE015487]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>1050</td>
   <td class=xl70></td>
@@ -223,7 +223,7 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
   <td class=xl70 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>Bílek
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>BÃ­lek
   Radek [CZE056362]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>950</td>
   <td class=xl70></td>
@@ -245,7 +245,7 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
   <td class=xl70 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>Medová
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>MedovÃ¡
   Marcela [CZE039792]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>850</td>
   <td class=xl70></td>
@@ -267,8 +267,8 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
   <td class=xl70 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>&#268;echová
-  Kate&#345;ina [CZE064386]</td>
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>ÄŒechovÃ¡
+  KateÅ™ina [CZE064386]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>750</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -311,8 +311,8 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>6</td>
   <td class=xl70 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>Šimek
-  Antonín [CZE013993]</td>
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>Å imek
+  AntonÃ­n [CZE013993]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>650</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -333,8 +333,8 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>7</td>
   <td class=xl70 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>Kope&#269;ek
-  Ond&#345;ej [CZE059905]</td>
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>KopeÄek
+  OndÅ™ej [CZE059905]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>550</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -355,7 +355,7 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>8</td>
   <td class=xl70 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>Tu&#269;ková
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>TuÄkovÃ¡
   Dana [CZE051452]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>550</td>
   <td class=xl70></td>
@@ -377,7 +377,7 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>9</td>
   <td class=xl70 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>Kameník
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>KamenÃ­k
   Roman [CZE059800]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>450</td>
   <td class=xl70></td>
@@ -399,7 +399,7 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>10</td>
   <td class=xl70 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>Novák
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>NovÃ¡k
   Radek [CZE049908]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>450</td>
   <td class=xl70></td>
@@ -421,7 +421,7 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>11</td>
   <td class=xl70 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>Tu&#269;ek
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>TuÄek
   Roman [CZE051451]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>450</td>
   <td class=xl70></td>
@@ -443,7 +443,7 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>12</td>
   <td class=xl70 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>Vrzá&#269;ek
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>VrzÃ¡Äek
   Josef [CZE070728]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>450</td>
   <td class=xl70></td>
@@ -487,8 +487,8 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>14</td>
   <td class=xl70 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>Jenšík
-  Ond&#345;ej [CZE057906]</td>
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>JenÅ¡Ã­k
+  OndÅ™ej [CZE057906]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -510,7 +510,7 @@ else
   <td class=xl70 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>Meister
-  Lukáš [CZE074613]</td>
+  LukÃ¡Å¡ [CZE074613]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -532,7 +532,7 @@ else
   <td class=xl70 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>Smejkal
-  František [CZE071305]</td>
+  FrantiÅ¡ek [CZE071305]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -553,8 +553,8 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>17</td>
   <td class=xl70 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>Urbánková
-  Kristýna [CZE076210]</td>
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>UrbÃ¡nkovÃ¡
+  KristÃ½na [CZE076210]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>250</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -575,8 +575,8 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>18</td>
   <td class=xl70 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>Vrzá&#269;ková
-  Alžb&#283;ta [CZE071138]</td>
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>VrzÃ¡ÄkovÃ¡
+  AlÅ¾bÄ›ta [CZE071138]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>250</td>
   <td class=xl70></td>
   <td class=xl70></td>
