--- a/TKV2024_files/sheet005.htm
+++ b/TKV2024_files/sheet005.htm
@@ -90,7 +90,7 @@ else
   <td class=xl70 width=50 style='width:38pt'></td>
  </tr>
  <tr height=58 style='height:43.5pt'>
-  <td colspan=11 height=58 class=xl189 style='border-right:.5pt solid black;
+  <td colspan=11 height=58 class=xl188 style='border-right:.5pt solid black;
   height:43.5pt'>TOUR KRAJE VYSOČINA 2024 - VÍTĚZOVÉ DO</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -124,7 +124,7 @@ else
  </tr>
  <tr height=0 style='display:none'>
   <td class=xl70></td>
-  <td class=xl175 style='font-size:11.0pt;color:white;font-weight:700;
+  <td class=xl207 style='font-size:11.0pt;color:white;font-weight:700;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;border-top:none;border-right:.5pt solid windowtext;
   border-bottom:none;border-left:.5pt solid windowtext;background:#4F81BD;
@@ -368,8 +368,8 @@ else
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>4</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Ptáček Radim [CZE071042]</td>
-  <td class=xl65 style='border:.5pt solid windowtext;background:#C5D6E9;
-  mso-pattern:black none'>4</td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#CDDBEC;
+  mso-pattern:black none'>3</td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext;background:#ADC5E0;
@@ -378,8 +378,8 @@ else
   mso-pattern:black none'>1</td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext;background:#86A9D2;
-  mso-pattern:black none'>12</td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#8EAED5;
+  mso-pattern:black none'>11</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
