--- a/TKV2025_files/sheet006.htm
+++ b/TKV2025_files/sheet006.htm
@@ -92,7 +92,7 @@ else
   <td class=xl70 width=50 style='width:38pt'></td>
  </tr>
  <tr height=58 style='height:43.5pt'>
-  <td colspan=11 height=58 class=xl178 style='border-right:.5pt solid black;
+  <td colspan=11 height=58 class=xl180 style='border-right:.5pt solid black;
   height:43.5pt'>TOUR KRAJE VYSOČINA 2025 - VÍTĚZOVÉ - DO</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -126,7 +126,7 @@ else
  </tr>
  <tr height=0 style='display:none'>
   <td class=xl70></td>
-  <td class=xl195 style='font-size:11.0pt;color:white;font-weight:700;
+  <td class=xl166 style='font-size:11.0pt;color:white;font-weight:700;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;border-top:none;border-right:.5pt solid windowtext;
   border-bottom:none;border-left:.5pt solid windowtext;background:#4F81BD;
@@ -151,7 +151,7 @@ else
  </tr>
  <tr height=0 style='display:none'>
   <td class=xl70></td>
-  <td class=xl196 style='font-size:11.0pt;color:white;font-weight:700;
+  <td class=xl167 style='font-size:11.0pt;color:white;font-weight:700;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext;
   mso-background-source:auto;mso-pattern:#4F81BD none'>Hra</td>
@@ -304,8 +304,8 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
-  mso-pattern:black none'>1</td>
+  <td class=xl70 style='border:.5pt solid windowtext;background:#ADC5E0;
+  mso-pattern:black none'>2</td>
   <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
   mso-pattern:black none'>1</td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
@@ -313,7 +313,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
   mso-pattern:black none'>1</td>
   <td class=xl70 style='border:.5pt solid windowtext;background:#4F81BD;
-  mso-pattern:black none'>3</td>
+  mso-pattern:black none'>4</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -325,19 +325,20 @@ else
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>2</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>Bednář Martin [CZE005253]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Procházka Petr
+  [CZE071371]</td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
-  mso-pattern:black none'>1</td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
-  mso-pattern:black none'>1</td>
-  <td class=xl70 style='border:.5pt solid windowtext;background:#96B4D7;
+  <td class=xl70 style='border:.5pt solid windowtext;background:#ADC5E0;
   mso-pattern:black none'>2</td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
+  <td class=xl70 style='border:.5pt solid windowtext;background:#7EA3CF;
+  mso-pattern:black none'>3</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -357,10 +358,10 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext;background:#96B4D7;
+  <td class=xl70 style='border:.5pt solid windowtext;background:#ADC5E0;
   mso-pattern:black none'>2</td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext;background:#96B4D7;
+  <td class=xl70 style='border:.5pt solid windowtext;background:#ADC5E0;
   mso-pattern:black none'>2</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -376,15 +377,15 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>Klíma Kvirín [CZE066638]</td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
-  mso-pattern:black none'>1</td>
+  <td class=xl70 style='border:.5pt solid windowtext;background:#ADC5E0;
+  mso-pattern:black none'>2</td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
-  mso-pattern:black none'>1</td>
+  <td class=xl70 style='border:.5pt solid windowtext;background:#ADC5E0;
+  mso-pattern:black none'>2</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -396,19 +397,18 @@ else
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>5</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>Brussmann Jiří
-  [CZE056087]</td>
-  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
-  mso-pattern:black none'>1</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Strašil Pavel [CZE015487]</td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext;background:#ADC5E0;
+  mso-pattern:black none'>2</td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
-  mso-pattern:black none'>1</td>
+  <td class=xl70 style='border:.5pt solid windowtext;background:#ADC5E0;
+  mso-pattern:black none'>2</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -420,8 +420,7 @@ else
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>6</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>Strašil Pavel [CZE015487]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Bednář Martin [CZE005253]</td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
@@ -432,6 +431,8 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
   mso-pattern:black none'>1</td>
+  <td class=xl70 style='border:.5pt solid windowtext;background:#ADC5E0;
+  mso-pattern:black none'>2</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -443,7 +444,7 @@ else
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>7</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>Švaříček Jiří [CZE049507]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Čermák Jiří [CZE051443]</td>
   <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
   mso-pattern:black none'>1</td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
@@ -466,12 +467,11 @@ else
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>8</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>Procházka Petr
-  [CZE071371]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Vondra Mário [WRD068543]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
   mso-pattern:black none'>1</td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
@@ -490,29 +490,6 @@ else
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>9</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>Kameník Roman [CZE059800]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
-  mso-pattern:black none'>1</td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
-  mso-pattern:black none'>1</td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
- </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>10</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Vondrák Miroslav
   [CZE056477]</td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
@@ -536,38 +513,19 @@ else
   <td class=xl70></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt'></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
- </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt'></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>10</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Jenšík Ondřej [CZE057906]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -578,38 +536,20 @@ else
   <td class=xl70></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt'></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
- </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt'></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>11</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Brussmann Jiří
+  [CZE056087]</td>
+  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -620,7 +560,19 @@ else
   <td class=xl70></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt'></td>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>12</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Kameník Roman [CZE059800]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -629,8 +581,67 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>13</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Švaříček Jiří [CZE049507]</td>
+  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
   <td class=xl70></td>
   <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>14</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Ptáček Radim [CZE071042]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>15</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Beneš Petr [CZE070315]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
