--- a/TKV2025.htm
+++ b/TKV2025.htm
@@ -478,11 +478,14 @@ function fnSetActiveSheet(iSh)
    </x:ExcelWorksheet>
   </x:ExcelWorksheets>
   <x:Stylesheet HRef="TKV2025_files/stylesheet.css"/>
-  <x:WindowHeight>15840</x:WindowHeight>
-  <x:WindowWidth>29040</x:WindowWidth>
+  <x:WindowHeight>21240</x:WindowHeight>
+  <x:WindowWidth>32767</x:WindowWidth>
   <x:WindowTopX>32767</x:WindowTopX>
   <x:WindowTopY>32767</x:WindowTopY>
   <x:TabRatio>920</x:TabRatio>
+  <x:FirstVisibleSheet>10</x:FirstVisibleSheet>
+  <x:SelectedSheets>30</x:SelectedSheets>
+  <x:Calculation>ManualCalculation</x:Calculation>
   <x:HidePivotTableFieldList/>
   <x:ProtectStructure>False</x:ProtectStructure>
   <x:ProtectWindows>False</x:ProtectWindows>
